# Axactor

./: Cargo.toml  README.md
axactor/: Cargo.toml
axactor-macros/: Cargo.toml  README.md
axactor-macros/src/: lib.rs
axactor/src/: lib.rs  obs.rs  registry.rs  rt.rs
axactor/tests/: compile_tests.rs  production_test.rs
axactor/tests/ui/: case_collision.rs  case_collision.stderr  reserved_name.rs  reserved_name.stderr  suffix_banned.rs  suffix_banned.stderr
examples/axum_demo/: Cargo.toml
examples/axum_demo/src/: main.rs
examples/axum_registry/: Cargo.toml
examples/axum_registry/src/: main.rs
