[package]
name = "axactor-macros"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the axactor actor library"
license = "MIT"
repository = "https://github.com/Feralthedogg/Axactor"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
darling = "0.20"
