[package]
name = "axactor"
version = "0.1.0"
edition = "2021"

[dependencies]
axactor-macros = { path = "../axactor-macros" }
tokio = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
derive_more = { workspace = true }
futures = { workspace = true }
axum = { workspace = true, optional = true }
tokio-util = { version = "0.7", features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
oneshot = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }


[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
trybuild = "1.0"

[features]

default = ["axum"]
axum = ["dep:axum"]
