[package]
name = "axactor"
version = "0.1.0"
edition = "2021"
description = "Actor Model Library"
license = "MIT"
repository = "https://github.com/Feralthedogg/Axactor"
readme = "README.md"


[dependencies]
axactor-macros = "0.1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
async-trait = "0.1"
derive_more = "0.99"
futures = "0.3"
axum = { version = "0.7", optional = true }
tokio-util = { version = "0.7", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oneshot = "0.1"
thiserror = "1.0"
parking_lot = "0.12"


[dev-dependencies]
tokio = { version = "1.0", features = ["full", "test-util"] }
trybuild = "1.0"

[features]
default = ["axum"]
axum = ["dep:axum"]
