[package]
name = "axum_demo"
version = "0.1.0"
edition = "2021"
description = "Procedural macros for the axactor actor library"
license = "MIT"
repository = "https://github.com/Feralthedogg/Axactor"
readme = "README.md"

[dependencies]
axactor = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
