[package]
name = "axum_registry"
version = "0.1.0"
edition = "2021"

[dependencies]
axactor = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

